Updated Jenkins roles

--- a/Ansible/roles/jenkins-role/tasks/main.yml
+++ b/Ansible/roles/jenkins-role/tasks/main.yml
@@ -49,7 +49,7 @@
   ansible.builtin.lineinfile:
     path: /etc/sudoers
     line: 'jenkins ALL=(ALL) NOPASSWD: ALL'
-    insertafter: '^root	ALL=(ALL:ALL) ALL'
+    insertafter: 'User privilege specification'
 
 
 
