--- a/Ansible/jenkins-playbook.yml
+++ b/Ansible/jenkins-playbook.yml
@@ -1,6 +1,6 @@
-- name: 'Running Jenkins Playbook ... .. .'
+- name: 'Jenkins Playbook'
   hosts: [jenkins_nodes]
-  become: true  
+  become: true
   roles:
     - role: java-role
     - role: git-role
