Added EKS cluster config

--- a/Ansible/roles/aws-iam-authenticator-role/tasks/main.yml
+++ b/Ansible/roles/aws-iam-authenticator-role/tasks/main.yml
@@ -14,7 +14,7 @@
   when: ansible_os_family == 'Debian'
 
 - name: '[AWS IAM Authenticator] - Verifying version'
-  shell: aws-iam-authenticator
+  shell: aws-iam-authenticator version
   register: out
   ignore_errors: true
   when: ansible_os_family == 'Debian'
